--- a/main.css
+++ b/main.css
@@ -17,3 +17,10 @@
 .dlhelper:hover{
 	box-shadow: 0px 0px 2px 0px brown;	
 }
+.changeButton{
+	float:right;
+	width: 30px;
+	margin-top: 4px;
+	margin-right: 10px;
+	cursor: pointer;
+}
